# ComputerVisionExperiments

./: .gitattributes  .gitignore  algo.py  algo1.py  algo3.py  clean_dataset.py  hello.py  inference.py  model.py  model_inf.ipynb  pyproject.toml
